Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-5707

LFSCK 3: cannot load namespace LFSCK tracing file after downgrade from Lustre-2.7

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.7.0, Lustre 2.5.4
    • Lustre 2.7.0, Lustre 2.5.3
    • None
    • 3
    • 15994

      Lustre: stldsk-MDT0000: used disk, loading
      LustreError: 11-0: stldsk-MDT0000-lwp-MDT0000: Communicating with 0@lo, operation mds_connect failed with -11.
      LustreError: 6830:0:(lfsck_namespace.c:147:lfsck_namespace_load()) stldsk-MDT0000-o: fail to load lfsck_namespace, expected = 256, rc = -34
      LustreError: 6830:0:(mdd_device.c:974:mdd_prepare()) stldsk-MDD0000: failed to initialize lfsck: rc = -34
      LustreError: 6830:0:(obd_mount_server.c:1725:server_fill_super()) Unable to start targets: -34
      Lustre: Failing over stldsk-MDT0000

            yong.fan nasf (Inactive)
            yong.fan nasf (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: