LU-5707 lfsck: recreate LFSCK tracing file for load failure

The extended attribute XATTR_NAME_LFSCK_NAMESPACE for namespace
LFSCK tracing file is enlarged since Lustre-2.7. When downgrade
from Lustre-2.7, the old MDS will get -ERANGE when loads the
XATTR_NAME_LFSCK_NAMESPACE extended attribute from the new
formatted on-disk namespace LFSCK tracing file. Under such case,
the LFSCK should not return failure, instead, it can recreate the
XATTR_NAME_LFSCK_NAMESPACE EA as initialization case.

More further, if the LFSCK failed to load tracing file, it is
unncessary to fail the whole LFSCK, instead, just recreate the
tracing file.

Signed-off-by: Fan Yong <fan.yong@intel.com>
Change-Id: Ifffd8fc89ff74fd2afbd7bb2df1da33dde52d7c9