lustre/lfsck/lfsck_namespace.c
@@ -144,18 +144,20 @@ static int lfsck_namespace_load(const struct lu_env *env,
 		} else {
 			rc = 0;
 		}
-	} else if (rc != -ENODATA) {
-		CDEBUG(D_LFSCK, "%s: fail to load lfsck_namespace, "
-		       "expected = %d: rc = %d\n",
-		       lfsck_lfsck2name(com->lc_lfsck), len, rc);
-		if (rc >= 0)
-			rc = 1;
+	} else {
+		if (rc != -ENODATA)
+			CDEBUG(D_LFSCK, "%s: fail to load lfsck_namespace, "
+			       "expected = %d: rc = %d\n",
+			       lfsck_lfsck2name(com->lc_lfsck), len, rc);
+		else if (rc > 0)
+			rc = -EINVAL;
 	}
+
 	return rc;
 }
 
 static int lfsck_namespace_store(const struct lu_env *env,
-				 struct lfsck_component *com, bool init)
+				 struct lfsck_component *com)
 {
 	struct dt_object	*obj    = com->lc_obj;
 	struct lfsck_instance	*lfsck  = com->lc_lfsck;
@@ -182,8 +184,7 @@ static int lfsck_namespace_store(const struct lu_env *env,
 
 	rc = dt_xattr_set(env, obj,
 			  lfsck_buf_get(env, com->lc_file_disk, len),
-			  XATTR_NAME_LFSCK_NAMESPACE,
-			  init ? LU_XATTR_CREATE : LU_XATTR_REPLACE,
+			  XATTR_NAME_LFSCK_NAMESPACE, 0,
 			  handle, BYPASS_CAPA);
 
 	GOTO(out, rc);
@@ -208,7 +209,7 @@ static int lfsck_namespace_init(const struct lu_env *env,
 	ns->ln_magic = LFSCK_NAMESPACE_MAGIC;
 	ns->ln_status = LS_INIT;
 	down_write(&com->lc_sem);
-	rc = lfsck_namespace_store(env, com, true);
+	rc = lfsck_namespace_store(env, com);
 	up_write(&com->lc_sem);
 	return rc;
 }
@@ -689,7 +690,7 @@ static int lfsck_namespace_reset(const struct lu_env *env,
 	if (rc != 0)
 		GOTO(out, rc);
 
-	rc = lfsck_namespace_store(env, com, true);
+	rc = lfsck_namespace_store(env, com);
 
 	GOTO(out, rc);
 
@@ -750,7 +751,7 @@ static int lfsck_namespace_checkpoint(const struct lu_env *env,
 		com->lc_new_checked = 0;
 	}
 
-	rc = lfsck_namespace_store(env, com, false);
+	rc = lfsck_namespace_store(env, com);
 	up_write(&com->lc_sem);
 
 	CDEBUG(D_LFSCK, "%s: namespace LFSCK checkpoint at the pos ["LPU64
@@ -1119,7 +1120,7 @@ static int lfsck_namespace_post(const struct lu_env *env,
 		com->lc_new_checked = 0;
 	}
 
-	rc = lfsck_namespace_store(env, com, false);
+	rc = lfsck_namespace_store(env, com);
 	up_write(&com->lc_sem);
 
 	CDEBUG(D_LFSCK, "%s: namespace LFSCK post done: rc = %d\n",
@@ -1481,7 +1482,7 @@ checkpoint:
 			ns->ln_time_last_checkpoint = cfs_time_current_sec();
 			ns->ln_objs_checked_phase2 += com->lc_new_checked;
 			com->lc_new_checked = 0;
-			rc = lfsck_namespace_store(env, com, false);
+			rc = lfsck_namespace_store(env, com);
 			up_write(&com->lc_sem);
 			if (rc != 0)
 				GOTO(put, rc);
@@ -1533,7 +1534,7 @@ out:
 	CDEBUG(D_LFSCK, "%s: namespace LFSCK phase2 scan finished, status %d: "
 	      "rc = %d\n", lfsck_lfsck2name(lfsck), ns->ln_status, rc);
 
-	rc = lfsck_namespace_store(env, com, false);
+	rc = lfsck_namespace_store(env, com);
 	up_write(&com->lc_sem);
 	if (atomic_dec_and_test(&lfsck->li_double_scan_count))
 		wake_up_all(&thread->t_ctl_waitq);
@@ -1740,8 +1741,9 @@ int lfsck_namespace_setup(const struct lu_env *env,
 	rc = lfsck_namespace_load(env, com);
 	if (rc > 0)
 		rc = lfsck_namespace_reset(env, com, true);
-	else if (rc == -ENODATA)
+	else if (rc < 0)
 		rc = lfsck_namespace_init(env, com);
+
 	if (rc != 0)
 		GOTO(out, rc);
 
